* Refactored the NightLabs-RWLock to be in a separate project: org.nightlabs.concurrent * Refactored the NightLabs-XML-Config to be in a separate project: org.nightlabs.config * New DataNucleus (1.1.3) in client-side (for font-registry). * Fixed a few bugs in the font-registry.
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseEAR@14633 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -48,5 +48,11 @@
         <dependent-module archiveName="JFireBaseDAO.jar" deploy-path="/" handle="module:/resource/JFireBaseDAO/JFireBaseDAO">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="org.nightlabs.concurrent.jar" deploy-path="/" handle="module:/resource/org.nightlabs.concurrent/org.nightlabs.concurrent">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="org.nightlabs.config.jar" deploy-path="/" handle="module:/resource/org.nightlabs.config/org.nightlabs.config">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
