A lot of changes concerning remote class loading project structures and dependencies. Unfortunately, I have to check-in a non-working client. Application start failes with ClassNotFoundException. Sorry, I hope I can fix it, soon
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseEAR@14639 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -42,9 +42,6 @@
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="JFireRCLBackend.jar" deploy-path="/" handle="module:/resource/JFireRCLBackend/JFireRCLBackend">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
         <dependent-module archiveName="JFireBaseDAO.jar" deploy-path="/" handle="module:/resource/JFireBaseDAO/JFireBaseDAO">
             <dependency-type>uses</dependency-type>
         </dependent-module>
@@ -52,6 +49,9 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="org.nightlabs.config.jar" deploy-path="/" handle="module:/resource/org.nightlabs.config/org.nightlabs.config">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="org.nightlabs.jfire.classloader.remote.backend.jar" deploy-path="/" handle="module:/resource/org.nightlabs.jfire.classloader.remote.backend/org.nightlabs.jfire.classloader.remote.backend">
             <dependency-type>uses</dependency-type>
         </dependent-module>
     </wb-module>
