Deploying org.nightlabs.unifiedjndi.jboss.client into the server, now, too.
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireIntegrationJBossEAR@15236 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -5,5 +5,8 @@
         <dependent-module archiveName="JFireIntegrationJBoss.jar" deploy-path="/" handle="module:/resource/JFireIntegrationJBoss/JFireIntegrationJBoss">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="org.nightlabs.unifiedjndi.jboss.client.jar" deploy-path="/" handle="module:/resource/org.nightlabs.unifiedjndi.jboss.client/org.nightlabs.unifiedjndi.jboss.client">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
