Extracted progress, util and i18n from org.nightlabs.base into separate OSGi-bundles.
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseEAR@17633 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -54,5 +54,14 @@
         <dependent-module archiveName="org.nightlabs.jfire.classloader.remote.backend.jar" deploy-path="/" handle="module:/resource/org.nightlabs.jfire.classloader.remote.backend/org.nightlabs.jfire.classloader.remote.backend">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="org.nightlabs.i18n.jar" deploy-path="/" handle="module:/resource/org.nightlabs.i18n/org.nightlabs.i18n">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="org.nightlabs.progress.jar" deploy-path="/" handle="module:/resource/org.nightlabs.progress/org.nightlabs.progress">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="org.nightlabs.util.jar" deploy-path="/" handle="module:/resource/org.nightlabs.util/org.nightlabs.util">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
