Reworked JFireTestSuite and Tests so the tests can be run from the Eclipse IDE
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireTestSuiteEAR@18386 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -6,10 +6,13 @@
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module deploy-path="/lib" handle="module:/classpath/lib/JFireTestSuite/lib/junit-4.8.1.jar">
+        <dependent-module deploy-path="/lib" handle="module:/classpath/lib/JFireTestSuite/lib/junit-4.8.2.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module deploy-path="/lib" handle="module:/classpath/lib/JFireTestSuite/lib/hamcrest-all-1.2.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module deploy-path="/lib" handle="module:/classpath/lib/JFireTestSuite/lib/commons-lang.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
     </wb-module>
