added new project org.nightlabs.singleton
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseEAR@18654 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -63,5 +63,8 @@
         <dependent-module archiveName="org.nightlabs.util.jar" deploy-path="/" handle="module:/resource/org.nightlabs.util/org.nightlabs.util">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="org.nightlabs.singleton.jar" deploy-path="/" handle="module:/resource/org.nightlabs.singleton/org.nightlabs.singleton">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
