--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="JFireServerUpdateBase">
-        <wb-resource deploy-path="/" source-path="/src"/>
+    <wb-module deploy-name="org.nightlabs.jfire.serverupdate.base">
+        <wb-resource deploy-path="/" source-path="/src/main/java"/>
     </wb-module>
 </project-modules>
