--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -72,5 +72,8 @@
         <dependent-module archiveName="org.nightlabs.xml.jar" deploy-path="/" handle="module:/resource/org.nightlabs.xml/org.nightlabs.xml">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="org.nightlabs.xml.jar" deploy-path="/" handle="module:/resource/org.nightlabs.xml/org.nightlabs.xml">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
